# rust-studies

./: .gitignore  Cargo.toml  README.md
src/studies/: commands.rs
src/studies/multithread_cli/: multithread_cli.rs
src/studies/st01_multithread_cli/: multithread_cli.rs
src/studies/st02_pdfgen/: README.md  pdfgen.rs  structs.rs
src/studies/st02_pdfgen/util/: frame.rs
