[package]
name = "rust-studies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
rand = "*"
skia-safe = { version = "0.63.0", features = ["textlayout"] }

[[bin]]
name = "multithread_cli"
path = "src/studies/st01_multithread_cli/multithread_cli.rs"

[[bin]]
name = "pdfgen"
path = "src/studies/st02_pdfgen/pdfgen.rs"
